# robot_dqn

catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/robot_expe/: NextTargetLocation.h  NextTargetLocationRequest.h  NextTargetLocationResponse.h  Velocity.h
catkin_ws/devel/include/robot_mind/: NextTargetLocation.h  NextTargetLocationRequest.h  NextTargetLocationResponse.h  next_target_location.h  next_target_locationRequest.h  next_target_locationResponse.h
catkin_ws/devel/include/sig_ros/: Velocity.h
catkin_ws/devel/lib/pkgconfig/: robot_expe.pc  robot_mind.pc  robot_world.pc  sig_ros.pc
catkin_ws/devel/lib/python2.7/dist-packages/robot_expe/msg/: _Velocity.py
catkin_ws/devel/lib/python2.7/dist-packages/robot_expe/srv/: _NextTargetLocation.py  __init__.py
catkin_ws/devel/lib/python2.7/dist-packages/robot_mind/srv/: _NextTargetLocation.py  __init__.py  _next_target_location.py
catkin_ws/devel/lib/python2.7/dist-packages/sig_ros/msg/: _Velocity.py
catkin_ws/devel/lib/robot_expe/: next_target_srv  robot_mind  ros_controller
catkin_ws/devel/share/common-lisp/ros/robot_expe/msg/: Velocity.lisp  _package.lisp  _package_Velocity.lisp  robot_expe-msg.asd
catkin_ws/devel/share/common-lisp/ros/robot_expe/srv/: NextTargetLocation.lisp  _package.lisp  _package_NextTargetLocation.lisp  robot_expe-srv.asd
catkin_ws/devel/share/common-lisp/ros/robot_mind/srv/: NextTargetLocation.lisp  _package.lisp  _package_NextTargetLocation.lisp  next_target_location.lisp  robot_mind-srv.asd
catkin_ws/devel/share/common-lisp/ros/sig_ros/msg/: Velocity.lisp  _package.lisp  _package_Velocity.lisp  sig_ros-msg.asd
catkin_ws/devel/share/robot_expe/cmake/: robot_expe-msg-paths.cmake  robot_expeConfig.cmake
catkin_ws/devel/share/robot_mind/cmake/: robot_mind-msg-extras.cmake  robot_mind-msg-paths.cmake  robot_mindConfig.cmake
catkin_ws/devel/share/robot_world/cmake/: robot_worldConfig.cmake
catkin_ws/devel/share/roseus/ros/robot_expe/: manifest.l
catkin_ws/devel/share/roseus/ros/robot_expe/msg/: Velocity.l
catkin_ws/devel/share/roseus/ros/robot_expe/srv/: NextTargetLocation.l
catkin_ws/devel/share/roseus/ros/robot_mind/: manifest.l
catkin_ws/devel/share/roseus/ros/robot_mind/srv/: NextTargetLocation.l  next_target_location.l
catkin_ws/devel/share/roseus/ros/sig_ros/: manifest.l
catkin_ws/devel/share/roseus/ros/sig_ros/msg/: Velocity.l
catkin_ws/devel/share/sig_ros/cmake/: sig_ros-msg-paths.cmake  sig_rosConfig.cmake
catkin_ws/src/robot_expe/: CMakeLists.txt  package.xml
catkin_ws/src/robot_expe/src/: next_target_srv.cpp  robot_controller.cpp  robot_controller_tmp.cpp  robot_mind.cpp  robot_mind.hpp  robot_mind.lua  robot_mind_wrap.cpp  robot_mind_wrap.hpp  robot_mind_wrap.inl  simple_movements_controller.lua
catkin_ws/src/robot_expe/src/data/: dataset_2015-7-28-19-50-52.t7  dataset_2015-7-28-19-51-18.t7  dataset_2015-7-28-21-41-43.t7  learn.lua  learn2.lua
dqn/: INSTRUCTIONS.txt  log  offline  test_agent  yeah_create_transitions
dqn/dqn/: GameEnvironment.lua  NeuralQLearner.lua  Scale.lua  TransitionTable.lua  convnet.lua  convnet_atari3.lua  create_transitions.lua  initenv.lua  log  net_preproc_robot_expe.lua  robot_expe.lua  robot_mind_wrap.inl  run_expe.lua  test_agent.lua  train_agent.lua  train_offline.lua
sigverse-2.3.1/share/sigverse/data/shape/: A1_art_deco1.x3d  A1_art_deco2.x3d  A1_art_deco3.x3d  A1_art_deco4.x3d  A1_door.x3d  A1_eacon.x3d  A1_magazines.x3d  A1_plant1.x3d  A1_plant2.x3d  A1_plate.x3d  A1_plate_holder.x3d  A1_roses.x3d  A1_rug.x3d  A1_small_table.x3d  A1_tableaux.x3d  A1_tool_hanger.x3d  man_nii_v2.x3d  nii_robot.x3d  robot_nii_v2.x3d  sample2.x3d  sample3.x3d  wheelrobot_nii_v1-1.x3d  wheelrobot_nii_v1.x3d
sigverse-2.3.1/share/sigverse/etc/: X3DParser.cfg  sigjsp.conf
sigverse-2.3.1/share/sigverse/samples/: Makefile.controller
sigverse-2.3.1/workspace/: block_large.x3d  block_large.xml  block_small.x3d  block_small.xml  box.x3d  box.xml  client  client.cpp  fake_target.x3d  fake_target.xml  floor.x3d  floor.xml  ground.xml  old_world.xml  robot_controller.cpp  robot_controller_ros.cpp  run.sh  simple_robot.x3d  simple_robot.xml  target.x3d  target.xml  target_controller.cpp  test_box.x3d  test_box.xml  test_box2.x3d  wall_x.x3d  wall_x.xml  wall_z.x3d  wall_z.xml  walls.x3d  walls.xml  world.xml  world2.xml  world3.xml  world4.xml  world5.xml
sigverse-2.3.1/workspace/lua/: tcp.lua
sigverse-2.3.1/workspace/samples/: Makefile  captureView.cpp  captureView.xml
sigverse-2.3.1/workspace/tcp_test/: client  client.c  server  server.c
